Feature/studio (#16)
* Add studios crud

* Add test for studios logic

* Add model spec methods

* Fix studios

* Fix lint

* Fix update studio
