# app/serializers/api/v1/digital_channel_serializer.rb
@@ -1,0 +1,3 @@
+class Api::V1::DigitalChannelSerializer < ActiveModel::Serializer
+  attributes :id, :value, :channel_type
+end
